Fix content overflow style

--- a/assets/styles/_marker-item.scss
+++ b/assets/styles/_marker-item.scss
@@ -6,7 +6,7 @@
   width: 25%;
   z-index: 10;
   bottom: 20px;
-  overflow: scroll;
+  overflow: hidden;
 
   &.fade-enter-active,
   &.fade-leave-active {
